--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@stripe/stripe-js": "^3.4.1",
     "@supabase/supabase-js": "^2.49.1",
     "framer-motion": "^11.0.8",
+    "nanoid": "^5.1.3",
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
